--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2b5da63
-	base = 4271e13
+	base = b2f7f36
 	trim = rcl_logging_interface
-	trimbase = 
+	trimbase = 4271e13
