--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2b5da63
-	base = 6963e6b
+	base = f363fae
 	trim = rcl_logging_noop
-	trimbase = 
+	trimbase = 6963e6b
