--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2b5da63
-	base = 80401ba
+	base = 16f8279
 	trim = rcl_logging_spdlog
-	trimbase = 
+	trimbase = 80401ba
