--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"2.5.1-1": ["Tue Apr 11 2023", "Chris Lalancette", "clalancette@openrobotics.org"], "2.5.0-2": ["Tue Mar 21 2023", "Chris Lalancette", "clalancette@openrobotics.org"]}
+{"2.6.0-1": ["Thu Apr 27 2023", "Chris Lalancette", "clalancette@openrobotics.org"], "2.5.1-1": ["Tue Apr 11 2023", "Chris Lalancette", "clalancette@openrobotics.org"], "2.5.0-2": ["Tue Mar 21 2023", "Chris Lalancette", "clalancette@openrobotics.org"]}
