--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rcl_logging_spdlog
-	previous = 
-	base = 22f57eac317a
+	previous = 22f57eac317a
+	base = 737b90fe1e5c
 	trim = 
 	trimbase = 
