--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rcl_logging_interface
-	previous = 
-	base = ca44f3920fb3
+	previous = ca44f3920fb3
+	base = b6846b668b52
 	trim = 
 	trimbase = 
