--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rcl_logging_noop
-	previous = 
-	base = 90d81f2043c2
+	previous = 90d81f2043c2
+	base = 3fa65631ace8
 	trim = 
 	trimbase = 
